--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Add remote 
-        env:
-          HF: ${{ secrets.HG }}
-        run: git remote add space https://tuankeued:$HF@huggingface.co/spaces/tuankeued/demoZoro
-      - name: Push to hub
-        env:
-          HF: ${{ secrets.HF }}
-        run: git push --force https://tuankeued:$HF@huggingface.co/spaces/tuankeued/demoZoro main
+      - name: Set up Hugging Face token
+        run: git config --global credential.helper store && echo "https://huggingface-token:${{ secrets.HG }}@huggingface.co" > ~/.git-credentials
+      
+      - name: Push to Hugging Face
+        run: |
+          git remote set-url origin https://huggingface.co/spaces/tuankeued/demoZoro/
+          git push origin main
