--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,5 @@ jobs:
       - name: Push to Hugging Face
         run: |
           git remote set-url origin https://huggingface.co/spaces/tuankeued/demoZoro/
+          git pull --rebase https://huggingface.co/spaces/tuankeued/demoZoro/ main
           git push origin main
